--- a/2021/2021-04/2021-04-15/source/160x600.css
+++ b/2021/2021-04/2021-04-15/source/160x600.css
@@ -309,46 +309,52 @@
 }
 .text1 {
   background: url('./images/160x600_text1.png') no-repeat center center;
-  width: 126px;
-  height: 51px;
-  top: 59px;
-  left: 18px;
+  width: 134px;
+  height: 86px;
+  top: 40px;
+  left: 15px;
   -webkit-animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 3.5s forwards;
 }
-.text1-container {
+.text1-container, .footer1-container {
   -webkit-animation: fadeOut 0.75s ease-in-out 6s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 6s forwards;
   animation: fadeOut 0.75s ease-in-out 6s forwards;
 }
 .text2 {
   background: url('./images/160x600_text2.png') no-repeat center center;
-  width: 134px;
-  height: 86px;
-  top: 40px;
-  left: 15px;
+  width: 133px;
+  height: 120px;
+  top: 24px;
+  left: 14px;
   -webkit-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
 }
-.text2-container, .footer1-container {
+.footer2 {
+  background: url('./images/160x600_footer2.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 6.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 6.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 6.5s forwards;
+}
+.text2-container, .footer2-container {
   -webkit-animation: fadeOut 0.75s ease-in-out 9s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 9s forwards;
   animation: fadeOut 0.75s ease-in-out 9s forwards;
 }
-.footer2 {
-  background: url('./images/160x600_footer2.png') no-repeat center center;
+.footer3 {
+  background: url('./images/160x600_footer1.png') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
   animation: fadeIn 0.75s ease-in-out 9.5s forwards;
 }
 .text3 {
   background: url('./images/160x600_text3.png') no-repeat center center;
-  width: 133px;
-  height: 120px;
-  top: 24px;
-  left: 14px;
+  width: 126px;
+  height: 51px;
+  top: 59px;
+  left: 18px;
   -webkit-animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
