SDM P7 Q2 2021 IO - update animation

--- a/2021/2021-05/2021-05-27/source/300x600.css
+++ b/2021/2021-05/2021-05-27/source/300x600.css
@@ -396,31 +396,15 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
   animation: fadeIn 0.75s ease-in-out 0.25s forwards;
 }
-#frame1.animation .product1-1 {
+#frame1.animation .product1-1, #frame1.animation .product1-2, #frame1.animation .product1-3, #frame1.animation .product1-4 {
   -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
 }
-#frame1.animation .product1-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-}
-#frame1.animation .product1-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
-}
-#frame1.animation .product1-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-}
-
 #frame1.animation {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
 }
 
 .text2 {
@@ -482,30 +466,15 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
   animation: fadeIn 0.75s ease-in-out 0.25s forwards;
 }
-#frame2.animation .product2-1 {
+#frame2.animation .product2-1, #frame2.animation .product2-2, #frame2.animation .product2-3, #frame2.animation .product2-4 {
   -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
 }
-#frame2.animation .product2-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-}
-#frame2.animation .product2-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
-}
-#frame2.animation .product2-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-}
 #frame2.animation .frame2-1 {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
 }
 
 .leaf2-2 {
@@ -549,34 +518,19 @@
   left: 216px;
 }
 #frame2.animation .leaf2-2 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 3.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 3s forwards;
+  animation: fadeIn 0.75s ease-in-out 3s forwards;
 }
-#frame2.animation .product3-1 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4s forwards;
-}
-#frame2.animation .product3-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-}
-#frame2.animation .product3-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
-}
-#frame2.animation .product3-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
+#frame2.animation .product3-1, #frame2.animation .product3-2, #frame2.animation .product3-3, #frame2.animation .product3-4 {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 3.25s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 3.25s forwards;
+  animation: fadeInDown 0.75s ease-in-out 3.25s forwards;
 }
 #frame2.animation .frame2-2 {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 7s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 7s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 7s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 5.5s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 5.5s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 5.5s forwards;
 }
 .product4-1 {
   background: url('./images/300x600_product4_1.png') no-repeat center center;
@@ -610,29 +564,13 @@
   top: 111px;
   left: 187px;
 }
-#frame2.animation .product4-1 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
+#frame2.animation .product4-1, #frame2.animation .product4-2, #frame2.animation .product4-3, #frame2.animation .product4-4 {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
+  animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
 }
-#frame2.animation .product4-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-}
-#frame2.animation .product4-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-}
-#frame2.animation .product4-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 8s forwards;
-  animation: fadeInDown 0.75s ease-in-out 8s forwards;
-}
-
 #frame2.animation {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
 }
