--- a/2021/2021-05/2021-05-27/source/300x250_m.css
+++ b/2021/2021-05/2021-05-27/source/300x250_m.css
@@ -396,31 +396,15 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
   animation: fadeIn 0.75s ease-in-out 0.25s forwards;
 }
-#frame1.animation .product1-1 {
+#frame1.animation .product1-1, #frame1.animation .product1-2, #frame1.animation .product1-3, #frame1.animation .product1-4 {
   -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
 }
-#frame1.animation .product1-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-}
-#frame1.animation .product1-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
-}
-#frame1.animation .product1-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-}
-
 #frame1.animation {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
 }
 
 .bg2 {
@@ -491,30 +475,15 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
   animation: fadeIn 0.75s ease-in-out 0.25s forwards;
 }
-#frame2.animation .product2-1 {
+#frame2.animation .product2-1, #frame2.animation .product2-2, #frame2.animation .product2-3, #frame2.animation .product2-4 {
   -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
 }
-#frame2.animation .product2-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-}
-#frame2.animation .product2-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
-}
-#frame2.animation .product2-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-}
 #frame2.animation .frame2-1 {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 3.5s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 2.75s forwards;
 }
 
 .product3-1 {
@@ -549,30 +518,15 @@
   top: 3px;
   left: 103px;
 }
-#frame2.animation .product3-1 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
-}
-#frame2.animation .product3-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4s forwards;
-}
-#frame2.animation .product3-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.25s forwards;
-}
-#frame2.animation .product3-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.5s forwards;
+#frame2.animation .product3-1, #frame2.animation .product3-2, #frame2.animation .product3-3, #frame2.animation .product3-4 {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 3s forwards;
+  animation: fadeInDown 0.75s ease-in-out 3s forwards;
 }
 #frame2.animation .frame2-2 {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 6.75s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 6.75s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 6.75s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 5.25s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 5.25s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 5.25s forwards;
 }
 .leaf2-2 {
   background: url('./images/300x250_m_leaf2_2.png') no-repeat center center;
@@ -615,38 +569,23 @@
   left: 98px;
 }
 #frame2.animation .leaf2-2 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 7s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 7s forwards;
-  animation: fadeIn 0.75s ease-in-out 7s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 5.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 5.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 5.5s forwards;
 }
-#frame2.animation .product4-1 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.25s forwards;
-}
-#frame2.animation .product4-2 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.5s forwards;
-}
-#frame2.animation .product4-3 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 7.75s forwards;
-}
-#frame2.animation .product4-4 {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 8s forwards;
-  animation: fadeInDown 0.75s ease-in-out 8s forwards;
+#frame2.animation .product4-1, #frame2.animation .product4-2, #frame2.animation .product4-3, #frame2.animation .product4-4 {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
+  animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
 }
 
 #frame2.animation .frame2-3 {
-  -webkit-animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
-  -moz-animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
-  animation: fadeOutLeft 0.75s ease-in-out 10.25s forwards;
+  -webkit-animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
+  -moz-animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
+  animation: fadeOutLeft 0.75s ease-in-out 8s forwards;
 }
 #frame2.animation {
-  -webkit-animation: fadeOut 0.1s ease-in-out 10.75s forwards;
-  -moz-animation: fadeOut 0.1s ease-in-out 10.75s forwards;
-  animation: fadeOut 0.1s ease-in-out 10.75s forwards;
+  -webkit-animation: fadeOut 0.1s ease-in-out 8.5s forwards;
+  -moz-animation: fadeOut 0.1s ease-in-out 8.5s forwards;
+  animation: fadeOut 0.1s ease-in-out 8.5s forwards;
 }
